--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -1,10 +1,13 @@
 name = "super-d-team-api"
 main = "src/worker.ts"
-compatibility_date = "2024-01-01"
+compatibility_date = "2025-12-16"
 
 [vars]
 # SUPABASE_URL = "your-supabase-url"
+# SUPABASE_PUBLISHABLE_KEY = "your-publishable-key"
+# SUPABASE_SECRET_KEY = "your-secret-key"
 # SUPABASE_ANON_KEY = "your-anon-key"
+# SUPABASE_SERVICE_ROLE_KEY = "your-service-role-key"
 
 [dev]
 port = 8787
